--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 streamlit
-pypdf
 python-dotenv
 PyPDF2
+pypdf
 langchain
 langchain-community
 langchain-google-genai
 chromadb==0.4.24
 protobuf==3.20.3
+setuptools
