--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,5 @@ langchain-community
 langchain-google-genai
 chromadb==0.4.24
 protobuf==3.20.3
-setuptools
-numpy==1.24.4
-pypdf
+setuptools>=67.0.0
+numpy>=1.26.0
