--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-streamlit
-python-dotenv
-PyPDF2
-langchain
-langchain-community
-langchain-google-genai
+streamlit==1.31.1
+python-dotenv==1.0.1
+PyPDF2==3.0.1
+langchain==0.1.17
+langchain-community==0.0.32
+langchain-google-genai==0.0.9
 chromadb==0.4.24
 protobuf==3.20.3
-setuptools>=67.0.0
-numpy>=1.26.0
+setuptools>=65.5.0
+numpy>=1.24.4
+pdfminer.six==20221105
