--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 streamlit==1.31.1
 python-dotenv==1.0.1
 PyPDF2==3.0.1
+langchain-community>=0.0.36,<0.1
 langchain==0.1.17
-langchain-community==0.0.32
 langchain-google-genai==0.0.9
 chromadb==0.4.24
 protobuf==3.20.3
